RESOLVED FIXED20756
RenderStyle doesn't update keyframes properly
https://bugs.webkit.org/show_bug.cgi?id=20756
Summary RenderStyle doesn't update keyframes properly
Dean Jackson
Reported 2008-09-09 18:10:10 PDT
There is some commented out code in StyleRareNonInheritedData that should execute. The fix for this is easy, but we need some animation tests.
Attachments
patch - testcases in another bug (1.54 KB, patch)
2008-09-09 18:13 PDT, Dean Jackson
timothy: review+
Dean Jackson
Comment 1 2008-09-09 18:13:41 PDT
Created attachment 23307 [details] patch - testcases in another bug
Dean Jackson
Comment 2 2008-09-11 15:37:29 PDT
Dean Jackson
Comment 3 2008-09-15 14:41:23 PDT
Committed r36458 M WebCore/rendering/style/RenderStyle.cpp M WebCore/ChangeLog
Note You need to log in before you can comment on or make changes to this bug.