2008-09-15  Dean Jackson  <dino@apple.com>

Reviewed by Tim Hatcher.

        RenderStyle should update keyframes.
        http://bugs.webkit.org/show_bug.cgi?id=20756

        * rendering/style/RenderStyle.cpp:
        (WebCore::StyleRareNonInheritedData::updateKeyframes):


Canonical link: https://commits.webkit.org/28747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36458 268f45cc-cd09-0410-ab3c-d52691b4dbfc